# quote_summary

./: .gitignore  .pre-commit-config.yaml  Readme.md  pyproject.toml  requirements.txt  summary.bat  summary.py
scripts/: constants.py  sds2_quote_summary_python3.py  summary.py  utils.py
scripts/sds2/: sds2_quote_summary_python3.py
scripts/tests/: conftest.py  test_integration.py  test_utils.py
